# ots_hw_5_MVC

./: CMakeLists.txt  Doxyfile  README.md  annotated.html  classController-members.html  classController.html  classController__inherit__graph.map  classController__inherit__graph.md5  classIModel-members.html  classIModel.html  classIModel__inherit__graph.map  classIModel__inherit__graph.md5  classModelFacade-members.html  classModelFacade.html  classModelFacade__coll__graph.map  classModelFacade__inherit__graph.md5  classObserver-members.html  classObserver.html  classObservered-members.html  classObservered.html  classView-members.html  classView.html  classView__coll__graph.map  classView__coll__graph.md5  classdetail_1_1Figure.html  classdetail_1_1Figure__inherit__graph.map  classdetail_1_1Figure__inherit__graph.md5  classdetail_1_1Line.html  classdetail_1_1Line__coll__graph.map  classdetail_1_1Line__inherit__graph.md5  classdetail_1_1Model-members.html  classdetail_1_1Model.html  classdetail_1_1Model__coll__graph.map  classdetail_1_1Model__coll__graph.md5  classdetail_1_1Point.html  classdetail_1_1Point__coll__graph.md5  classdetail_1_1Point__inherit__graph.map  classdetail_1_1Rectangle.html  classdetail_1_1Rectangle__coll__graph.md5  classdetail_1_1Rectangle__inherit__graph.map  (+34 more)
search/: all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  classes_1.js  classes_2.js  classes_7.js  classes_8.js  classes_9.js  functions_0.js  functions_2.js  searchdata.js
src/: controller.cpp  controller.h  main.cpp  model.cpp  model.h  model_facade.cpp  model_facade.h  view.h  (+2 more)
(+2 files in other folders)
